# gNAISTO

./: LICENSE  README.md  environment.yml  pyproject.toml
examples/: .gitignore  estimated_regulation.csv  testrun_gnaisto - コピー (2).py  testrun_gnaisto - コピー.py  testrun_gnaisto.py
examples/example_data/: expression.csv  regulation.csv
src/gnaisto/: __init__.py  data_utils.py  model_utils.py  optim_utils.py  plot_utils.py
src/gnaisto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
